@@ -5,6 +5,7 @@ UMockdevTestbed
 umockdev_testbed_new
 umockdev_testbed_add_device
 umockdev_testbed_add_devicev
+umockdev_testbed_remove_device
 umockdev_testbed_get_root_dir
 umockdev_testbed_get_sys_dir
 umockdev_testbed_set_attribute
